--- a/portal-setgen-api/package.json
+++ b/portal-setgen-api/package.json
@@ -34,6 +34,7 @@
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.12",
+    "@nestjs/serve-static": "^5.0.4",
     "@nestjs/swagger": "^11.2.5",
     "@prisma/client": "^6.19.1",
     "axios": "^1.13.4",
